# kuzu-memory-graph-mcp

./: .gitignore  BUGFIX_APPLIED.md  CLAUDE.md  README.md  pyproject.toml  test_bugfix.py  test_bugfix_simple.py  test_embedding_fix.py  test_server.py
DBMS/: memory.kuzu.wal
DBMS/docs/: README_Prompt_Engineering_DB.md  create_prompt_engineering_db.py  demo_queries.py  ingest_research_papers.py  ingestion_example.py  prompt_engineering_schema.cypher  prompt_engineering_schema.md  research_papers_mcp_traversal.md  research_papers_schema.md
docs/: API.md  DEVELOPMENT.md  FINAL_STRUCTURE.md
src/: __init__.py  kuzu_memory_server.py  kuzu_memory_server_FIXED.py  semantic_search.py
