[project]
name = "kuzu-memory-graph-mcp"
version = "0.1.0"
description = "High-performance LLM memory server using Kuzu graph database with semantic search"
authors = [
    {name = "AI Memory Systems", email = "memory@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "memory", "graph", "kuzu", "semantic-search", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
dependencies = [
    "kuzu>=0.11.2",
    "modelcontextprotocol>=0.1.0",
    "sentence-transformers>=5.1.1",
    "numpy>=2.3.3",
    "mlx-embeddings>=0.0.4",
    "mcp>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
kuzu-memory-server = "src.kuzu_memory_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
